--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body {
     background-color: grey;
 }
+
+ul{
+    padding-left: 0;
+}
+
+li {
+    background-color: black;
+    display: inline;
+    color: white;
+}
